--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "test"
+name = "SPGA-backend"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -20,6 +20,7 @@ dependencies = [
     "torch>=2.7.0",
     "torchaudio>=2.7.0",
     "torchvision>=0.22.0",
+    "sqlmodel>=0.0.24",
 ]
 
 [tool.ruff.lint.pycodestyle]
